--- a/poc-hyperwallet-pgp.csproj
+++ b/poc-hyperwallet-pgp.csproj
@@ -8,4 +8,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="PgpCore" Version="5.9.0" />
+  </ItemGroup>
+
 </Project>
